# vision-craft

./: README.md
backend/: pyproject.toml
backend/migrations/versions/: 4ffe17a13612_init_tables.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/zentra/: index.tsx
frontend/src/layout/: SidebarTopbarLayout.tsx
